--- a/src/styles/pm.module.scss
+++ b/src/styles/pm.module.scss
@@ -13,7 +13,7 @@
   font-size: 14px;
   line-height: 1.5;
 
-  margin-block-start: .8em;
+  margin-block-start: 0.8em;
 }
 
 @media (prefers-color-scheme: dark) {
