:lipstick: chore: Sync the changes with lunaiz

--- a/src/styles/content.module.scss
+++ b/src/styles/content.module.scss
@@ -65,7 +65,7 @@ main {
     border: 1px solid #d5d7dc;
     border-radius: 10px;
     color: #17191c;
-    text-decoration: none;
+    text-decoration: none !important;
 
     font-size: 14px;
     line-height: 42px;
